force-app/src/objects/CTCM__XAFXML_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CTCM__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__SFDC_Field__c</fullName>
        <label>SFDC Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__XAF_Tag__c</fullName>
        <label>XAF Tag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>XAFXML Mapping</label>
</CustomObject>